--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ h1 {
     text-align: center;
 }
 
+h2 {
+    text-align: center;
+}
 body {
     font-family: 'Ubuntu', sans-serif;
     background-color: aquamarine;
@@ -23,7 +26,7 @@ body {
 main {
     width: 800px;
     border: 1px solid black ;
-    margin: 100px 50px 50px 100px ;
+    margin: 100px 100px 100px 100px ;
     display: flex;
     justify-content: center;
     padding: 2rem;
